# signal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci-api.yml  ci-artist-tracker.yml  ci-e2e.yml  ci-enricher.yml  ci-history-tracker.yml  ci-lastfm-ingester.yml  ci-normalizer.yml  ci-novelty-detector.yml  ci-scorer.yml
docs/: SIGNAL — MVP v2.md  SIGNAL — MVP.md  SIGNAL-Architecture.md  SIGNAL-Roadmap.md  artist-discovery-flow.md
docs/adr/: ADR-001-kafka-vs-simple-queues.md  ADR-002-postgresql-vs-nosql.md  ADR-003-uv-workspace.md  ADR-004-enrichment-fallback-chain.md  ADR-005-dead-letter-queue-pattern.md  ADR-007-normalizer-enricher-split.md  ADR-008-audio-features-deprecation.md  ADR-009-dbmate-schema-migrations.md  ADR-010-shared-resilience-primitives.md  ADR-011-base-spotify-client-and-service-error.md  ADR-012-artist-tracker-polling-loop.md  ADR-013-played-field-source-discrimination.md  ADR-014-per-service-ci-with-path-filters.md  ADR-015-e2e-consumer-group-health-check.md  ADR-016-lastfm-similar-artist-expansion.md  ADR-017-go-novelty-detector.md  ADR-018-confluent-kafka-go.md  ADR-019-signal-dashboard-tech-stack.md  ADR-020-lastfm-artist-tags-as-primary-genre-source.md  ADR-021-stats-endpoints-in-signal-api.md  ADR-022-spotify-resource-error-circuit-breaker-bypass.md
docs/decisions/: 2026-05-17-001-kafka-vs-simple-queues.md  2026-05-17-002-postgresql-vs-nosql.md
docs/services/: enricher.md  history-tracker.md  lastfm-ingester.md  normalizer.md  novelty-detector.md  scorer.md  shared-common.md
infra/: docker-compose.yml
infra/postgres/: init.sql
infra/postgres/migrations/: 002-v2-listening-history.sql  003-add-scrobble-count.sql  004-novelty-detector-indexes.sql  (+2 more)
scripts/: backfill_artist_external_ids.py  backfill_genres.py  get_spotify_token.py  onboarding.py  qmd-setup.sh  setup-claude-global.sh
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/signal_api/: __main__.py  app.py  deps.py  metrics.py  models.py  repository.py  settings.py  utils.py
services/api/src/signal_api/routers/: artists.py  health.py  recommendations.py  stats.py
services/api/tests/: conftest.py
services/api/tests/unit/: test_artists.py  test_artists_list.py  test_health.py  test_middleware.py  test_recommendations.py
services/artist-tracker/: Dockerfile  README.md  pyproject.toml
services/artist-tracker/src/signal_artist_tracker/: __main__.py  app.py  artist_repository.py  lastfm_client.py  settings.py  spotify_client.py
services/artist-tracker/tests/unit/: test_app.py  test_artist_repository.py  test_artist_repository_similar.py  test_lastfm_client.py  test_spotify_client.py
services/dashboard/: Dockerfile  index.html  package.json  vite.config.ts
services/enricher/: Dockerfile  README.md  pyproject.toml
services/enricher/src/signal_enricher/: __main__.py  app.py  circuit_breaker.py  enricher.py  lastfm_client.py  settings.py  spotify_client.py
services/enricher/tests/unit/: test_circuit_breaker.py  test_enricher.py  test_lastfm_client.py  test_rate_limiter.py  test_spotify_client.py
services/history-tracker/: Dockerfile  README.md  pyproject.toml
services/history-tracker/src/signal_history_tracker/: __main__.py  app.py  artist_repository.py  dlq_publisher.py  history_repository.py  settings.py
services/history-tracker/tests/integration/: test_app.py
services/history-tracker/tests/unit/: test_app_played_flag.py  test_artist_repository.py  test_dlq_publisher.py  test_history_repository.py
services/lastfm-ingester/: Dockerfile  README.md  pyproject.toml
services/lastfm-ingester/src/signal_lastfm_ingester/: __main__.py  app.py  client.py  converter.py  settings.py
services/lastfm-ingester/tests/: test_converter.py  test_resilience.py
services/lastfm-ingester/tests/fixtures/: lastfm_response.json
services/normalizer/: Dockerfile  README.md  pyproject.toml
services/normalizer/src/signal_normalizer/: __main__.py  app.py  artist_repository.py  enricher.py  lastfm_client.py  settings.py  signal_id.py  spotify_client.py
services/normalizer/tests/: test_app.py  test_artist_repository.py  test_enricher.py  test_lastfm_client.py  test_signal_id.py  test_spotify_client.py
services/novelty-detector/: .dockerignore  .golangci.yml  Dockerfile  README.md  config.go  consumer.go  consumer_test.go  dlq.go  go.mod  go.sum  integration_test.go  kafka.go  main.go  mocks_test.go  models.go  novelty.go  novelty_test.go  pyproject.toml  repository.go
services/novelty-detector/.github/workflows/: novelty-detector.yml
services/novelty-detector/cmd/novelty-detector/: main.go
services/novelty-detector/internal/config/: config.go
services/novelty-detector/internal/consumer/: consumer.go  consumer_test.go  integration_test.go  mocks_test.go
services/novelty-detector/internal/dlq/: dlq.go
services/novelty-detector/internal/kafka/: kafka.go
services/novelty-detector/internal/novelty/: novelty.go  novelty_test.go
services/novelty-detector/internal/repository/: repository.go
services/novelty-detector/src/signal_novelty_detector/: __main__.py  app.py  artist_repository.py  dlq_publisher.py  novelty_repository.py  settings.py
services/novelty-detector/tests/integration/: test_app.py
services/novelty-detector/tests/unit/: test_app.py  test_artist_repository.py  test_novelty_repository.py
services/scorer/: Dockerfile  README.md  pyproject.toml
services/scorer/src/signal_scorer/: __main__.py  app.py  dlq_publisher.py  scoring.py  settings.py
services/scorer/tests/integration/: test_app.py
services/scorer/tests/unit/: test_app.py  test_scoring.py
shared/python-common/: README.md  pyproject.toml
shared/python-common/src/signal_common/: checkpoint.py  circuit_breaker.py  db.py  kafka_consumer.py  kafka_producer.py  logger.py  models.py  rate_limiter.py  settings.py  spotify.py
shared/python-common/tests/: test_checkpoint.py  test_circuit_breaker.py  test_rate_limiter.py
tests/e2e/: conftest.py  helpers.py  test_pipeline.py
(+26 files in other folders)
