[project]
name = "signal-api"
version = "0.1.0"
description = "API service — FastAPI + Swagger UI for artist management and recommendations"
requires-python = ">=3.12"
dependencies = [
    "signal-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "prometheus-fastapi-instrumentator>=7.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-mock>=3.14",
]

[project.scripts]
signal-api = "signal_api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_api"]

[tool.uv.sources]
signal-common = { workspace = true }
