[project]
name = "signal-artist-tracker"
version = "0.1.0"
description = "Artist-tracker service — polls Spotify top-tracks for FOLLOWING artists and emits to raw.tracks"
requires-python = ">=3.12"
dependencies = [
    "signal-common",
    "psycopg[binary]>=3.1",
    "requests>=2.31",
]

[project.scripts]
signal-artist-tracker = "signal_artist_tracker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_artist_tracker"]

[tool.uv.sources]
signal-common = { workspace = true }
