[project]
name = "signal-enricher"
version = "0.1.0"
description = "Enricher service — enriches normalized tracks with Spotify metadata and emits to tracks.enriched"
requires-python = ">=3.12"
dependencies = [
    "signal-common",
    "requests>=2.31",
]

[project.scripts]
signal-enricher = "signal_enricher.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_enricher"]

[tool.uv.sources]
signal-common = { workspace = true }
