[project]
name = "signal-history-tracker"
version = "0.1.0"
description = "History Tracker service — persists listening history and increments play counts"
requires-python = ">=3.12"
dependencies = [
    "signal-common",
    "psycopg[binary]>=3.1",
]

[project.scripts]
signal-history-tracker = "signal_history_tracker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_history_tracker"]

[tool.uv.sources]
signal-common = { workspace = true }
