[project]
name = "signal-lastfm-ingester"
version = "0.1.0"
description = "Last.fm ingester service — polls scrobbles and emits to raw.plays"
requires-python = ">=3.12"
dependencies = [
    "signal-common",
    "httpx>=0.27",
    "requests>=2.31",
]

[project.scripts]
signal-lastfm-ingester = "signal_lastfm_ingester.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_lastfm_ingester"]

[tool.uv.sources]
signal-common = { workspace = true }
