[project]
name = "signal-novelty-detector"
version = "0.1.0"
description = "Novelty Detector service — detects new artists and genres, emits to tracks.novel"
requires-python = ">=3.12"
dependencies = [
    "signal-common",
    "psycopg[binary]>=3.1",
]

[project.scripts]
signal-novelty-detector = "signal_novelty_detector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_novelty_detector"]

[tool.uv.sources]
signal-common = { workspace = true }
