[project]
name = "signal-scorer"
version = "0.1.0"
description = "Scorer service — scores novel artists by genre novelty and popularity, upserts into artist_recommendations"
requires-python = ">=3.12"
dependencies = [
    "signal-common",
    "psycopg[binary]>=3.1",
]

[project.scripts]
signal-scorer = "signal_scorer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_scorer"]

[tool.uv.sources]
signal-common = { workspace = true }
