[project]
name = "signal-common"
version = "0.1.0"
description = "Shared utilities for Signal services"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.1",
    "confluent-kafka>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_common"]
